Fixed media query iPad tab overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1037,7 +1037,7 @@ button {
 
     .main .container {
         display: grid;
-        grid-template-columns: 32rem 1fr;
+        grid-template-columns: 24rem 1fr;
         gap: 3.6rem;
         align-items: flex-start;
     }
